sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:13: error: Unmatched closing brace '}' ignored here
} 
^AlgBubbleSort3:16: error: eof expected but '}' found.
}
^